Fixes Data Directory not showing in edit mode
- It specifically needs that class to override

--- a/css/build.css
+++ b/css/build.css
@@ -1,6 +1,6 @@
 /* Compatbility with new Drag & Drop interface */
 
-[data-fl-edit],
+.mode-interact [data-fl-edit],
 [data-fl-edit] .fl-widget-instance {
   position: static;
 }
